<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcf4fa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddToListFragment"
    android:id="@+id/fragment_add_to_list" >

    
    <Button
        android:id="@+id/search_buttonAddToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/search" />
    
    <EditText
        android:id="@+id/textBoxAddToList_nameOrCompany"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/search_buttonAddToList"
        android:hint="@string/name_or_company"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:paddingBottom="4dip" />

    <Button
        android:id="@+id/scan_buttonAddToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textBoxAddToList_nameOrCompany"
        android:text="@string/scan_barcode" />

    <TextView
        android:id="@+id/AddToList_scan_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textBoxAddToList_nameOrCompany"
        android:layout_centerHorizontal="true"
        android:text="@string/format_field"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/AddToList_scan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddToList_scan_format"
        android:layout_centerHorizontal="true"
        android:text="@string/content_field"
        android:textIsSelectable="true" />
    
     <ListView
        android:id="@+id/AddToList_contents_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddToList_scan_content"
        android:layout_marginTop="5dp"
        android:background="#dcf4fa"
        android:cacheColorHint="#dcf4fa"
        android:scrollbars="vertical" >
    </ListView>

</RelativeLayout>